# openvpn-auth-ldap-novo

./: CMakeLists.txt  README.md
src/: CMakeLists.txt  base64.c  plugin.c
